# BlackOS

./: CMakeLists.txt  README.md
Include/BOS/: Array.hpp  FIFO.hpp  Memory.hpp  Status.hpp  Terminal.hpp
Include/BOS/Core/: Array.hpp  FIFO.hpp  Memory.hpp  Status.hpp  String.hpp
Include/BOS/Events/: Event.hpp  EventSink.hpp  EventSource.hpp
Include/BOS/HID/: Keyboard.hpp  Mouse.hpp
Include/BOS/Kernel/: Driver.hpp  Kernel.hpp
Source/BOS/: Terminal.cpp
Source/BOS/Core/: Status.cpp
Source/BOS/Kernel/: Kernel.cpp  Multiboot.s
Tests/: Test-FIFO.cpp
Tests/Core/: CMakeLists.txt  Test-FIFO.cpp
